[package]
name = "elph-core"
version = "0.0.15"
license = "MIT"
description = "Shared core utilities for Elph applications"
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
publish = true

[lib]
name = "elph_core"
path = "src/lib.rs"

[features]
default = []
fastembed = ["dep:fastembed"]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
memchr.workspace = true
parking_lot.workspace = true
fastembed = { workspace = true, optional = true }
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt", "rt-multi-thread", "sync", "time"] }
tracing-appender.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
turso.workspace = true
tsid.workspace = true

[dev-dependencies]
tempfile.workspace = true
