[package]
name = "elph-core"
version = "0.0.16"
license = "MIT"
description = "Shared core utilities for Elph applications"
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
publish = true

[lib]
name = "elph_core"
path = "src/lib.rs"

[features]
default = ["git"]
embed = ["dep:embed_anything"]
git = ["dep:git2"]
tracing = ["dep:fastrace", "dep:fastrace-reqwest", "fastrace/enable"]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
embed_anything = { workspace = true, optional = true }
fastrace = { workspace = true, optional = true }
fastrace-reqwest = { workspace = true, optional = true }
git2 = { workspace = true, optional = true }
kalid.workspace = true
log.workspace = true
logforth.workspace = true
memchr.workspace = true
parking_lot.workspace = true
rand.workspace = true
rustc-hash.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt", "rt-multi-thread", "sync", "time"] }
turso.workspace = true

[dev-dependencies]
tempfile.workspace = true

[[test]]
name = "tracing_integration"
path = "tests/tracing_integration.rs"
required-features = ["tracing"]

[lints.rust]
linker_messages = "allow"
