[package]
name = "elph-exec"
version = "0.0.1"
license = "MIT"
description = "Configurable local shell and PTY execution for Elph"
keywords = ["shell", "pty", "process", "elph"]
categories = ["os", "asynchronous"]
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
publish = true

[lib]
name = "elph_exec"
path = "src/lib.rs"

[dependencies]
log.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "macros", "net", "process", "rt", "time"] }
tokio-util = { workspace = true }

[target.'cfg(unix)'.dependencies]
rustix = { workspace = true }

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }

[lints.rust]
linker_messages = "allow"
