[package]
name = "elph-swarm"
version = "0.0.9"
license = "MIT"
description = "Orchestration library for elph AI coding agents."
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
publish = true

[lib]
name = "elph_swarm"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
memorable-ids.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints.rust]
linker_messages = "allow"
