[package]
name = "elph-tui"
version = "0.0.26"
license = "MIT"
description = "Terminal UI components for Elph agent"
keywords = ["tui", "terminal", "prompt", "iocraft", "elph"]
categories = ["command-line-utilities", "gui"]
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
publish = false

[lib]
name = "elph_tui"
path = "src/lib.rs"

# ans: all dependencies removed during TUI reset — crate is a placeholder until TUI API stabilises.
# iocraft, crossterm, pulldown-cmark, similar, etc. will be re-added when
# the widget library is extracted back from the elph binary crate.

[dependencies]
anyhow.workspace = true
chrono.workspace = true
iocraft.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "signal", "sync", "time"] }
unicode-width.workspace = true
# base64.workspace = true
# chord_macro = "0.1"
# futures.workspace = true
# crossterm.workspace = true
# elph-core = { workspace = true, features = ["git"] }
# memchr.workspace = true
# parking_lot.workspace = true
# pulldown-cmark.workspace = true
# rayon.workspace = true
# similar.workspace = true
# unicode-segmentation.workspace = true

[dev-dependencies]
mexprp = { version = "0.3.1", default-features = false }
# futures.workspace = true
# similar-asserts.workspace = true
# tokio = { workspace = true, features = ["macros"] }

[target.'cfg(unix)'.dev-dependencies]
# libc.workspace = true

[[example]]
name = "basic_context"
path = "examples/basic_context.rs"

[[example]]
name = "basic_counter"
path = "examples/basic_counter.rs"

[[example]]
name = "basic_form"
path = "examples/basic_form.rs"

[[example]]
name = "basic_input"
path = "examples/basic_input.rs"

[[example]]
name = "basic_layout"
path = "examples/basic_layout.rs"

[[example]]
name = "basic_output"
path = "examples/basic_output.rs"

[[example]]
name = "basic_overlap"
path = "examples/basic_overlap.rs"

[[example]]
name = "basic_scrolling"
path = "examples/basic_scrolling.rs"

[[example]]
name = "basic_table"
path = "examples/basic_table.rs"

[[example]]
name = "calculator"
path = "examples/calculator.rs"

[[example]]
name = "chat_layout"
path = "examples/chat_layout.rs"

[[example]]
name = "progress_bar"
path = "examples/progress_bar.rs"

[[example]]
name = "weather"
path = "examples/weather.rs"

[lints.rust]
linker_messages = "allow"
