[package]
name = "elph-tui"
version = "0.0.26"
license = "MIT"
description = "Terminal UI components for Elph agent"
keywords = ["tui", "terminal", "prompt", "iocraft", "elph"]
categories = ["command-line-utilities", "gui"]
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
publish = false

[lib]
name = "elph_tui"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
figlet-rs.workspace = true
iocraft.workspace = true
memchr.workspace = true
pulldown-cmark.workspace = true
qrcode.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
similar.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "signal", "sync", "time"] }
unicode-segmentation.workspace = true
unicode-width.workspace = true

[dev-dependencies]
futures.workspace = true
macro_rules_attribute = "0.2.0"
mexprp = { version = "0.3.1", default-features = false }
smol = "2.0.2"
smol-macros = "0.1.1"

[[example]]
name = "basic_context"
path = "examples/basic_context.rs"

[[example]]
name = "basic_counter"
path = "examples/basic_counter.rs"

[[example]]
name = "basic_form"
path = "examples/basic_form.rs"

[[example]]
name = "basic_input"
path = "examples/basic_input.rs"

[[example]]
name = "basic_layout"
path = "examples/basic_layout.rs"

[[example]]
name = "basic_output"
path = "examples/basic_output.rs"

[[example]]
name = "basic_overlap"
path = "examples/basic_overlap.rs"

[[example]]
name = "basic_scrolling"
path = "examples/basic_scrolling.rs"

[[example]]
name = "basic_table"
path = "examples/basic_table.rs"

[[example]]
name = "calculator"
path = "examples/calculator.rs"

[[example]]
name = "chat_layout"
path = "examples/chat_layout.rs"

[[example]]
name = "progress_bar"
path = "examples/progress_bar.rs"

[[example]]
name = "weather"
path = "examples/weather.rs"

[[example]]
name = "demo_text_card"
path = "examples/demo_text_card.rs"

[[example]]
name = "demo_input"
path = "examples/demo_input.rs"

[[example]]
name = "demo_scroll"
path = "examples/demo_scroll.rs"

[[example]]
name = "demo_select"
path = "examples/demo_select.rs"

[[example]]
name = "demo_code"
path = "examples/demo_code.rs"

[[example]]
name = "demo_markdown"
path = "examples/demo_markdown.rs"

[[example]]
name = "demo_diff"
path = "examples/demo_diff.rs"

[[example]]
name = "demo_special"
path = "examples/demo_special.rs"

[[example]]
name = "demo_loading_indicator"
path = "examples/demo_loading_indicator.rs"

[[example]]
name = "demo_progress_indicator"
path = "examples/demo_progress_indicator.rs"

[lints.rust]
linker_messages = "allow"
