[package]
name = "elph-tui"
version = "0.0.7"
license = "MIT"
description = "Terminal UI components for Elph agent"
repository = "https://github.com/riipandi/elph"
authors = ["Aris Ripandi <aris@duck.com>"]
rust-version = "1.96"
edition = "2024"
publish = true

[dependencies]
iocraft.workspace = true
unicode-width = "0.2"

[dev-dependencies]
futures = "0.3"
macro_rules_attribute = "0.2"
smol-macros = "0.1"
