[package]
name = "elph-tui"
version = "0.0.8"
license = "MIT"
description = "Terminal UI components for Elph agent"
homepage = "https://elph.space"
repository = "https://github.com/riipandi/elph"
keywords = ["tui", "terminal", "prompt", "iocraft", "elph"]
categories = ["command-line-utilities", "gui"]
authors = ["Aris Ripandi <aris@duck.com>"]
rust-version = "1.96"
edition = "2024"
publish = true

[lib]
name = "elph_tui"
path = "src/lib.rs"

[dependencies]
crossterm.workspace = true
iocraft.workspace = true
signal-hook.workspace = true
tokio.workspace = true
unicode-width = "0.2"

[dev-dependencies]
futures = "0.3"
tokio = { workspace = true, features = ["macros"] }

[target.'cfg(unix)'.dev-dependencies]
nix = { workspace = true }
