[package]
name = "elph-tui"
version = "0.0.12"
license = "MIT"
description = "Terminal UI components for Elph agent"
homepage = "https://elph.space"
repository = "https://github.com/riipandi/elph"
keywords = ["tui", "terminal", "prompt", "iocraft", "elph"]
categories = ["command-line-utilities", "gui"]
rust-version = "1.96"
edition = "2024"
publish = true

[lib]
name = "elph_tui"
path = "src/lib.rs"

[dependencies]
crokey.workspace = true
crossterm.workspace = true
iocraft.workspace = true
pulldown-cmark.workspace = true
similar.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "signal", "sync", "time"] }
unicode-width = "0.2"

[dev-dependencies]
futures = "0.3"
similar-asserts = "2.0.0"
tokio = { workspace = true, features = ["macros"] }

[target.'cfg(unix)'.dev-dependencies]
libc.workspace = true
